# witch_craft

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Gemfile  MANPAGE.md  MANUAL.md  README.md  SECURITY.md  build-devel.sh  build-dist.sh  build.sh  core.rb  docker-compose.yml  install.sh  main.rb  server.rb  snapcraft.yaml  test.rb  tools.ttx  witchcraft.sh  zynim.nimble
.bundle/: config
.github/: dependabot.yml
archive/: metadata.txt
components/: useragent.cop
config/: letk.rb  requirements.txt  tools.conf
data/: lorem.html
database/: best-site.db  dark-web-links.db  onion_links.db  search-and-fonts.db  tor-alternatives.db  wpa.md
docs/: command_line.md  documentation.md  error_codes.md  feature_goals.md  index.html  man_page.md  report_documentation.md  sample_code.md  todo_list.md
maid_api/: Cargo.toml
maid_api/src/meow/: meow.rs
maid_docs/: ISO27X.md  feature_goals.md  man_page.md
maid_reports/: Cargo.toml
maid_reports/src/: main.rs
maid_reports/src/api/: api.rs
maid_reports/src/meow/: meow.rs  mod.rs
maid_runner/: .env  Cargo.toml
maid_runner/migrations/2023-10-20-140131_sample_database/: up.sql
maid_runner/src/: main.rs  schema.rs  test.rs
maid_runner/src/core/: core.rs  manual.rs  messages.rs  mod.rs  report.rs  structs.rs  utils.rs
maid_runner/src/meow/: meow.rs
maid_runner/src/modules/: mod.rs
maid_runner/src/modules/attack/: attack.rs  mod.rs
maid_runner/src/modules/curl/: curl.rs  curl_structs.rs  mod.rs
maid_runner/src/modules/firewall/: firewall.rs  firewall_structs.rs  mod.rs
maid_runner/src/modules/iso/: iso.rs  iso_builder.rs  iso_structs.rs  mod.rs
maid_runner/src/modules/lookup/: lookup.rs  lookup_structs.rs
maid_runner/src/modules/maid_av/: entropy.rs  maid_av.rs  mod.rs
maid_runner/src/modules/maid_ce/: maid_ce.rs  mod.rs
maid_runner/src/modules/maid_container_engine/: mod.rs
maid_runner/src/modules/osint/: osint.rs  osint_structs.rs
maid_runner/src/modules/post_attack/: mod.rs
maid_runner/src/modules/scanner/: scanner.rs  scanner_structs.rs
maid_runner/src/shell/: shell.rs
maid_runner/src/test/: mod.rs  test_core.rs  test_firewall.rs  test_iso27x.rs  test_lookup.rs  test_maid_av.rs  test_scanner.rs
maid_ui/: index.html
maid_visual/: next.config.js  package-lock.json  package.json  src
modules/: automap.rb  colors.rb  config.rb  core.rb  engine.rb  fakedump.rb  install.rb  test  (+9 more)
witch_craft/: .gitignore  .rustfmt.toml  Cargo.toml
witch_craft/src/: main.rs
witch_craft/src/core/: consts.rs  core.rs  data.rs  logger.rs  manual.rs  mod.rs  report.rs  structs.rs  types.rs  utils.rs  witchrc.rs
witch_craft/src/manual/: hints.rs  manual.rs
witch_craft/src/meow/: meow.rs
witch_craft/src/modules/: mod.rs
witch_craft/src/modules/antivirus/: antivirus.rs  entropy.rs  mod.rs
witch_craft/src/modules/attack/: mod.rs
witch_craft/src/modules/binds/: binds.rs  mod.rs  sysinfo.rs
witch_craft/src/modules/blackcat/: backend.rs  blackcat.rs  mod.rs
witch_craft/src/modules/blood_moon/: blood_moon.rs  blood_moon_structs.rs  mod.rs
witch_craft/src/modules/botnet/: mod.rs
witch_craft/src/modules/core/: consts.rs  core.rs  data.rs  mod.rs  structs.rs
witch_craft/src/modules/cubes/: cubes.rs  cubes_structs.rs  mod.rs
witch_craft/src/modules/curl/: curl.rs
witch_craft/src/modules/firewall/: firewall.rs
witch_craft/src/modules/icebreaker/: data.rs  mod.rs
witch_craft/src/modules/iso/: iso.rs  iso_structs.rs  mod.rs
witch_craft/src/modules/lookup/: lookup.rs  mod.rs
witch_craft/src/modules/maid_av/: maid_av.rs  mod.rs
witch_craft/src/modules/manual/: hints.rs  manual.rs  mod.rs
witch_craft/src/modules/msic/: misc_structs.rs  msic.rs
witch_craft/src/modules/network/: ddos.rs  map_network.rs  mod.rs  network.rs  server.rs  structs.rs
witch_craft/src/modules/osint/: data.rs  lookup.rs  meta_search.rs  mod.rs  osint.rs  structs.rs
witch_craft/src/modules/rootkit/: mod.rs
witch_craft/src/modules/scanner/: mod.rs  scanner.rs
witch_craft/src/modules/shell/: fancy.rs  mod.rs  shell.rs
witch_craft/src/modules/social/: mod.rs  qrcode.rs  social.rs
witch_craft/src/shell/: shell.rs
witch_craft/src/test/: malware_list.txt  mod.rs  test_antivirus.rs  test_bcurl.rs  test_core.rs  test_iso27x.rs  test_lookup.rs  test_maid_av.rs  test_scanner.rs  test_start.rs
witch_oracle/src-tauri/: Cargo.toml  tauri.conf.json
witch_oracle/src-tauri/src/: lib.rs  main.rs
witch_oracle/src-tauri/src/core/: core.rs  extra.rs  mod.rs
witch_oracle/src-tauri/src/test/: mod.rs
witch_oracle/src-tauri/src/tests/: tests.rs
(+216 files in other folders)
