[package]
name = "maid_api"
version = "0.12.2"
description = " Maid Runner is a versatile task automation software designed to serve as the foundation for various cyber security modules. It provides capabilities for tasks such as forensic research, OSINT (Open Source Intelligence), scanning, backup and copying, intrusion testing of applications and APIs, and more."
authors = ["th3Maid"]
license = "GPLv3"
repository = "https://github.com/th3Maid/MaidRunner"
edition = "2021"

[dependencies]
