[package]
name = "maid_runner"
authors = ["Cosmic Lace <anon@anon.com>"]
license = "GPL-v3"
description = "Maid Runner is a versatile task automation software designed to serve as the foundation for various cyber security modules."
readme = "../README.md"
homepage = "https://github.com/th3Maid/MaidRunner"
version = "0.12.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
colored = "2.0.4"
csv = "1.2.2"
hex = "0.4.3"
rusqlite = "0.29.0"
sha256 = "1.4.0"
