[package]
name = "witch_craft"
version = "0.17.65"
edition = "2021"

[dependencies]
chrono = "0.4.38"
colored = "2.1.0"
image = "0.25.2"
qrcode = "0.14.1"
regex = "1.10.6"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
sha256 = "1.5.0"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
opt-level = "z"

[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
